""" Besu Ecosystem """
module(
    name = "besu-ecosystem",
    compatibility_level = 1,
    repo_name = "besu_ecosystem",
    version = "2025.0.0-SNAPSHOT",
)

bazel_dep(name = "rules_license", version = "1.0.0")

bazel_dep(name = "dagger", repo_name = "dagger_204500", version = "2.45")
bazel_dep(name = "dagger", repo_name = "dagger_205200", version = "2.52")
multiple_version_override(
    module_name = "dagger",
    versions = [
        "2.45",
        "2.52",
    ],
)

bazel_dep(name = "immutables", repo_name = "immutables_209030", version = "2.9.3")
bazel_dep(name = "immutables", repo_name = "immutables_201010", version = "2.10.1")
multiple_version_override(
    module_name = "immutables",
    versions = [
        "2.9.3",
        "2.10.1",
    ],
)

bazel_dep(name = "besu", repo_name = "besu_23103_hotfix", version = "23.10.3-hotfix")
bazel_dep(name = "besu", repo_name = "besu_241000", version = "24.10.0")
multiple_version_override(
    module_name = "besu",
    versions = [
        "23.10.3-hotfix",
        "24.10.0",
    ],
)

bazel_dep(name = "besu-contrib", version = "2025.0.0-SNAPSHOT")
