""" Besu Ecosystem """

module(
    name = "besu-ecosystem",
    version = "2025.0.0-SNAPSHOT",
    compatibility_level = 1,
    repo_name = "besu_ecosystem",
)

bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "bazel-contrib-lint", version = "2025.0.0-SNAPSHOT")
bazel_dep(name = "dagger", version = "2.45", repo_name = "dagger_204500")
bazel_dep(name = "dagger", version = "2.52", repo_name = "dagger_205200")
multiple_version_override(
    module_name = "dagger",
    versions = [
        "2.45",
        "2.52",
    ],
)

bazel_dep(name = "immutables", version = "2.9.3", repo_name = "immutables_209030")
bazel_dep(name = "immutables", version = "2.10.1", repo_name = "immutables_201010")
multiple_version_override(
    module_name = "immutables",
    versions = [
        "2.9.3",
        "2.10.1",
    ],
)

bazel_dep(name = "besu", version = "23.10.3-hotfix", repo_name = "besu_23103_hotfix")
bazel_dep(name = "besu", version = "24.10.0", repo_name = "besu_241000")
multiple_version_override(
    module_name = "besu",
    versions = [
        "23.10.3-hotfix",
        "24.10.0",
    ],
)

bazel_dep(name = "besu-contrib", version = "2025.0.0-SNAPSHOT")
